--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,10 @@
       background-color: black;
 }
 
+/* regole generali bottoni btn */
+.btn-custom {
+      color: white;
+      border: solid 1px white;
+      
+  }
+ 
