fix header ed inserimento link nav bootstrap con script js per il toggler hamburger in responsive smartphone

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@
 .btn-custom {
       color: white;
       border: solid 1px white;
+     
+      
+  }
+
+  .btn-outline-success{
       
   }
  
