inserito hover color corretto con classe custom nei nav item

--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,15 @@
       
   }
 
-  .btn-outline-success{
+  .bs_nav_link .nav-item a{
+      color: white;
       
   }
+
+  .bs_nav_link .nav-item a:hover{
+      color: green;
+  }
+
  
   /* footer  regole */
   .learn-more-link{
