--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@
       
   }
 
+  /* regole classi custom item nav */
+
   .bs_nav_link .nav-item a{
       color: white;
       
@@ -53,6 +55,36 @@
       color: green;
   }
 
+
+  /* regole classi custom per la position ed l hover sulle img */
+  .img-container {
+      position: relative;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(128, 128, 128, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 0;
+      
+    }
+    .plus-icon {
+      font-size: 3rem;
+      color:#fff;
+      background-color: rgba(0, 128, 0, 0.5);
+      border-radius: 50%;
+      padding: 10px;
+    }
+    .img-container:hover .overlay {
+      opacity: 2;
+      
+      
+    }
  
   /* footer  regole */
   .learn-more-link{
