--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@
       
   }
 
+  .btn-custom:hover{
+      background-color: #fff;
+      color: black;
+  }
+
   /* regole classi custom item nav */
 
   .bs_nav_link .nav-item a{
@@ -66,7 +71,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(128, 128, 128, 0.5);
+      background-color: rgba(128, 128, 128, 0.6);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -78,7 +83,7 @@
       color:#fff;
       background-color: rgba(0, 128, 0, 0.5);
       border-radius: 50%;
-      padding: 10px;
+      padding: 97px;
     }
     .img-container:hover .overlay {
       opacity: 2;
