--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,21 @@
     max-width: 300px;
 }
 
+/* regole Header bg */
+header{
+      background-color: #2C3E50;
+}
+
+/* MAIN */
+
+/* BG SEZIONE Jumbo */
+.bg-gradien{
+      background-color:#1ABC9C;
+}
+
+
+/* BG SEZIONE ABOUT */
+
 /* star layout */
 
 .star::before,
@@ -47,6 +62,16 @@
   .btn-custom:hover{
       background-color: #fff;
       color: black;
+  }
+
+  .btn_submit .btn-success{ 
+      background-color: #1ABC9C;
+  }
+
+
+  .btn_submit .btn-success:hover{
+      background-color: #2C3E50;
+      color:white;
   }
 
   /* regole classi custom item nav */
@@ -96,3 +121,12 @@
       text-decoration: none;
       color: green;
   }
+
+  .bg-gradient{
+      background-color:#2C3E50;  
+  }
+
+  .copyright{
+      background-color: #3A546D;
+  }
+ 
